# ransomduck

./: .gitignore  Cargo.toml  README.md  RansomDuck-Design.md  RansomDuck-Notes.md  install.sh  uninstall.sh
crates/rd-audit/: Cargo.toml
crates/rd-audit/src/: lib.rs  webhook.rs
crates/rd-cli/: Cargo.toml
crates/rd-cli/src/: main.rs
crates/rd-common/: Cargo.toml
crates/rd-common/src/: lib.rs
crates/rd-containment/: Cargo.toml
crates/rd-containment/src/: lib.rs
crates/rd-core/: Cargo.toml
crates/rd-core/src/: config.rs  lib.rs  process_linux.rs
crates/rd-detection/: Cargo.toml
crates/rd-detection/src/: lib.rs
crates/rd-simulator/: Cargo.toml
crates/rd-simulator/src/: lib.rs  main.rs
gui/tauri-app/: .gitignore  package-lock.json  package.json  vite.config.js
gui/tauri-app/src/: index.html  main.js  styles.css
gui/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
gui/tauri-app/src-tauri/icons/: generate_icon.py  icon.icns
gui/tauri-app/src-tauri/src/: lib.rs  main.rs
