[package]
name = "rd-audit"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rd-common = { path = "../rd-common" }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
ureq = { version = "2", features = ["json"] }

[dev-dependencies]
uuid = { workspace = true }
