[package]
name = "rd-containment"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Process containment actions for RansomDuck"

[dependencies]
rd-common = { path = "../rd-common" }
serde = { workspace = true }
uuid = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
nix = { version = "0.29", features = ["signal"] }
