[package]
name = "rd-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rd-common = { path = "../rd-common" }
rd-detection = { path = "../rd-detection" }
rd-audit = { path = "../rd-audit" }
notify = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
