[package]
name = "rd-simulator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "fake-ransomware"
path = "src/main.rs"

[dependencies]
rd-common = { path = "../rd-common" }
rand = { workspace = true }
sha2 = { workspace = true }
tempfile = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
