[package]
name = "ransomduck-tray"
version = "0.1.0"
description = "RansomDuck system-tray GUI"
authors = ["RansomDuck Team"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mazanivan/ransomduck"

[lib]
name = "ransomduck_tray_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "ransomduck-tray"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
directories = "5.0"
toml = "0.8"
rand = "0.8"
rd-core = { path = "../../../crates/rd-core" }
rd-audit = { path = "../../../crates/rd-audit" }
rd-simulator = { path = "../../../crates/rd-simulator" }
rd-common = { path = "../../../crates/rd-common" }
rd-containment = { path = "../../../crates/rd-containment" }
